--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="container-fluid text-center">
-<img src="assets/images/starwars.jpg">
+<img src="assets/images/starwars.png">
 	<h1>RPG Game</h1>
 	<div class="row">
 		<h2 id="todo"></h2>
